--- a/ThinkWhat/Modules/UI/Popup & Banner/Content/Plain text/PlainBannerContent.xib
+++ b/ThinkWhat/Modules/UI/Popup & Banner/Content/Plain text/PlainBannerContent.xib
@@ -19,7 +19,7 @@
             <rect key="frame" x="0.0" y="0.0" width="400" height="90"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OQV-SC-voe">
+                <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="OQV-SC-voe">
                     <rect key="frame" x="0.0" y="0.0" width="400" height="90"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PiT-bG-Vee">
@@ -41,7 +41,7 @@
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rEW-d2-shq">
-                            <rect key="frame" x="40" y="0.0" width="360" height="90"/>
+                            <rect key="frame" x="44" y="0.0" width="356" height="90"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
