--- a/ThinkWhat/Modules/UI/Static/Avatar/delAvatar.xib
+++ b/ThinkWhat/Modules/UI/Static/Avatar/delAvatar.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Avatar" customModule="ThinkWhat" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="delAvatar" customModule="ThinkWhat" customModuleProvider="target">
             <connections>
                 <outlet property="border" destination="gQv-EW-IX4" id="2BB-Eo-u4S"/>
                 <outlet property="borderBg" destination="js7-17-TTd" id="ISf-HI-Jr9"/>
