CurrentUserProfile social media cell completed

--- a/ThinkWhat/Controllers/App/User/Cells/InterestCollectionCell.xib
+++ b/ThinkWhat/Controllers/App/User/Cells/InterestCollectionCell.xib
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -42,4 +44,9 @@
             <point key="canvasLocation" x="1.6000000000000001" y="12.593703148425789"/>
         </collectionViewCell>
     </objects>
+    <designables>
+        <designable name="82C-3x-Fub">
+            <size key="intrinsicContentSize" width="35.333333333333336" height="19.333333333333332"/>
+        </designable>
+    </designables>
 </document>
