--- a/ThinkWhat/Modules/Controllers/App/Settings/Switch/SettingsSwitch.xib
+++ b/ThinkWhat/Modules/Controllers/App/Settings/Switch/SettingsSwitch.xib
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsSwitch" customModule="ThinkWhat" customModuleProvider="target">
             <connections>
-                <outlet property="bg" destination="iwD-jd-JYK" id="kJX-XA-hMa"/>
+                <outlet property="backgroundView" destination="iwD-jd-JYK" id="kJX-XA-hMa"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="uK9-2E-vXx"/>
                 <outlet property="profile" destination="jpP-nO-8oe" id="hB0-5W-bhs"/>
                 <outlet property="settings" destination="hCF-9c-DhK" id="7o0-Em-ovF"/>
+                <outlet property="shadowView" destination="Meq-Zj-G0I" id="MgS-g9-feL"/>
+                <outlet property="stackView" destination="uMH-Qi-fDp" id="ZdL-sr-Jcn"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,42 +23,54 @@
             <rect key="frame" x="0.0" y="0.0" width="115" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iwD-jd-JYK">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Meq-Zj-G0I">
                     <rect key="frame" x="0.0" y="0.0" width="115" height="50"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uMH-Qi-fDp">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iwD-jd-JYK">
                             <rect key="frame" x="0.0" y="0.0" width="115" height="50"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jpP-nO-8oe">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" secondItem="jpP-nO-8oe" secondAttribute="height" multiplier="1:1" identifier="first" id="zZ5-BW-hnC"/>
-                                    </constraints>
-                                </imageView>
-                                <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hCF-9c-DhK">
-                                    <rect key="frame" x="65" y="0.0" width="50" height="50"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" secondItem="hCF-9c-DhK" secondAttribute="height" multiplier="1:1" identifier="fourth" id="kW1-l7-4ff"/>
-                                    </constraints>
-                                </imageView>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uMH-Qi-fDp">
+                                    <rect key="frame" x="0.0" y="0.0" width="115" height="50"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jpP-nO-8oe">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="jpP-nO-8oe" secondAttribute="height" multiplier="1:1" identifier="first" id="zZ5-BW-hnC"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hCF-9c-DhK">
+                                            <rect key="frame" x="65" y="0.0" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="hCF-9c-DhK" secondAttribute="height" multiplier="1:1" identifier="fourth" id="kW1-l7-4ff"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                </stackView>
                             </subviews>
-                        </stackView>
+                            <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="uMH-Qi-fDp" firstAttribute="height" secondItem="iwD-jd-JYK" secondAttribute="height" id="6b1-4j-ZxA"/>
+                                <constraint firstItem="uMH-Qi-fDp" firstAttribute="centerY" secondItem="iwD-jd-JYK" secondAttribute="centerY" id="Bi6-2V-jlp"/>
+                                <constraint firstItem="uMH-Qi-fDp" firstAttribute="centerX" secondItem="iwD-jd-JYK" secondAttribute="centerX" id="Pq4-fz-sKo"/>
+                                <constraint firstItem="uMH-Qi-fDp" firstAttribute="width" secondItem="iwD-jd-JYK" secondAttribute="width" id="nf2-Z8-ehV"/>
+                            </constraints>
+                        </view>
                     </subviews>
-                    <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstItem="uMH-Qi-fDp" firstAttribute="height" secondItem="iwD-jd-JYK" secondAttribute="height" id="6b1-4j-ZxA"/>
-                        <constraint firstItem="uMH-Qi-fDp" firstAttribute="centerY" secondItem="iwD-jd-JYK" secondAttribute="centerY" id="Bi6-2V-jlp"/>
-                        <constraint firstItem="uMH-Qi-fDp" firstAttribute="centerX" secondItem="iwD-jd-JYK" secondAttribute="centerX" id="Pq4-fz-sKo"/>
-                        <constraint firstItem="uMH-Qi-fDp" firstAttribute="width" secondItem="iwD-jd-JYK" secondAttribute="width" id="nf2-Z8-ehV"/>
+                        <constraint firstItem="iwD-jd-JYK" firstAttribute="leading" secondItem="Meq-Zj-G0I" secondAttribute="leading" id="DYk-af-CFF"/>
+                        <constraint firstItem="iwD-jd-JYK" firstAttribute="top" secondItem="Meq-Zj-G0I" secondAttribute="top" id="Zzp-iY-QNp"/>
+                        <constraint firstAttribute="trailing" secondItem="iwD-jd-JYK" secondAttribute="trailing" id="h1B-iW-WjF"/>
+                        <constraint firstAttribute="bottom" secondItem="iwD-jd-JYK" secondAttribute="bottom" id="ipJ-7s-7HE"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="iwD-jd-JYK" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="KQz-jv-W3l"/>
-                <constraint firstAttribute="trailing" secondItem="iwD-jd-JYK" secondAttribute="trailing" id="euZ-oG-GNM"/>
-                <constraint firstItem="iwD-jd-JYK" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="mYR-pZ-Twb"/>
-                <constraint firstAttribute="bottom" secondItem="iwD-jd-JYK" secondAttribute="bottom" id="my2-aB-kbz"/>
+                <constraint firstAttribute="bottom" secondItem="Meq-Zj-G0I" secondAttribute="bottom" id="WnN-lr-bgC"/>
+                <constraint firstAttribute="trailing" secondItem="Meq-Zj-G0I" secondAttribute="trailing" id="ad0-br-Faq"/>
+                <constraint firstItem="Meq-Zj-G0I" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="iqO-I6-lzS"/>
+                <constraint firstItem="Meq-Zj-G0I" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="o2n-Sb-uc5"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="139" y="86"/>
